deploy/allowed-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-client
  namespace: ledger
  labels:
    app: allowed-client
spec:
  serviceAccountName: default
  containers:
  - name: curl
    image: curlimages/curl
    command:
    - sleep
    - "3600"
