deploy/ledger-api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ledger-api
  namespace: ledger

spec:

  selector:
    app: ledger-api

  ports:

  - port: 80
    targetPort: 8000
