deploy/allow-ledger.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ledger-api
  namespace: ledger
spec:
  selector:
    matchLabels:
      app: ledger-api
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/ledger/sa/default
